# dry-rs

./: .coderabbit.yaml  .dry-rs-ignore.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  crap4rs.toml  deny.toml  dry-rs.toml  dry.example.toml  dry.schema.json  dry.toml  dry4rs.toml  index.html  lefthook.yml
.cargo/: mutants.toml
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml
.github/actions/scorecard/: action.yml
.github/workflows/: actionlint.yml  bdd-tracked-lint.yml  bot-context-drift.yml  ci.yml  example-smoke.yml  mutants.yml  pr-preview-cleanup.yml  refresh-bench.yml  self-test.yml  zizmor.yml
.github/workflows/examples/: dry-scorecard.yml
crates/dry-core/: Cargo.toml
crates/dry-core/src/: lib.rs  test_support.rs
crates/dry-core/src/adapters/: config.rs  config_doc_gen.rs  config_schema_gen.rs  mod.rs
crates/dry-core/src/adapters/reporters/: mod.rs
crates/dry-core/src/adapters/reporters/github_annotations/: mod.rs
crates/dry-core/src/adapters/reporters/html/: mod.rs
crates/dry-core/src/adapters/reporters/json/: envelope.rs  mod.rs
crates/dry-core/src/adapters/reporters/markdown/: mod.rs
crates/dry-core/src/adapters/reporters/text/: mod.rs
crates/dry-core/src/adapters/source/: crate_id.rs  mod.rs
crates/dry-core/src/cli/: adapter_meta.rs  args.rs  build_command.rs  effective.rs  mod.rs  run.rs  scope.rs
crates/dry-core/src/comparison/: antiunify.rs  mod.rs
crates/dry-core/src/comparison/antiunify/: tests.rs
crates/dry-core/src/domain/: config.rs  enums.rs  form.rs  identity.rs  match.rs  mod.rs  report.rs  scope.rs  score.rs  span.rs  summary.rs  template.rs  tree.rs
crates/dry-core/src/ports/: mod.rs  normalizer.rs  tree.rs
crates/dry-core/templates/: html_report.html  markdown_report.md
crates/dry-core/tests/: adapters_proptest.rs  antiunify_proptest.proptest-regressions  antiunify_proptest.rs  cli_args.rs  comparison_proptest.rs  config.rs  domain_proptest.rs  domain_serde.rs  github_annotations_snapshot.rs  markdown_snapshot.rs  wire_envelope_snapshot.rs
crates/dry-core/tests/common/: mod.rs
crates/dry-core/tests/snapshots/: github_annotations_snapshot__github_annotations_all_three_tiers_locked.snap  github_annotations_snapshot__github_annotations_property_value_escapes_locked.snap  markdown_snapshot__markdown_all_three_tiers_locked.snap  markdown_snapshot__markdown_empty_report_locked.snap  wire_envelope_snapshot__wire_envelope_v0_1_locked_shape.snap
crates/dry-examples/: Cargo.toml  EXPECTED.md  README.md
crates/dry-examples/examples/: bench-output.md  bench.sh
crates/dry-examples/examples/edge_cases/async_vs_sync_same_body/: README.md  expected.json  main.rs
crates/dry-examples/examples/edge_cases/cross_file_duplicate/: README.md  consumer.rs  expected.json  producer.rs
crates/dry-examples/examples/edge_cases/doctest_duplicates/: README.md  main.rs
crates/dry-examples/examples/edge_cases/generic_with_different_bounds/: README.md  main.rs
crates/dry-examples/examples/edge_cases/macro_expansion_duplicate/: README.md  expected.json  main.rs
crates/dry-examples/examples/edge_cases/trait_impl_vs_free_fn/: README.md  main.rs
crates/dry-examples/examples/tier_1_exact/identical_async_fns/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_1_exact/identical_method_bodies/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_1_exact/identical_signatures/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_2_renamed/renamed_locals/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_2_renamed/renamed_params/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_2_renamed/renamed_struct_fields/: README.md  main.rs
crates/dry-examples/examples/tier_3_reordered/rearranged_method_chain/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_3_reordered/reordered_match_arms/: README.md  expected.json  main.rs
crates/dry-examples/examples/tier_3_reordered/swapped_let_bindings/: README.md  main.rs
crates/dry-examples/examples/tier_4_false_positive_bait/common_error_handling/: README.md  main.rs
crates/dry-examples/examples/tier_4_false_positive_bait/shared_idiom/: README.md  main.rs
crates/dry-examples/examples/tier_4_false_positive_bait/similar_signatures_different_bodies/: README.md  main.rs
crates/dry-examples/examples/tier_5_algorithmic/iterative_vs_recursive_factorial/: README.md  main.rs
crates/dry-examples/examples/tier_5_algorithmic/sort_via_quicksort_vs_mergesort/: README.md  main.rs
crates/dry-examples/src/: lib.rs
crates/dry-examples/tests/: snapshots.rs
crates/dry4rs/: Cargo.toml
crates/dry4rs/src/: lib.rs  main.rs
crates/dry4rs/src/parser/: mod.rs  normalizer.rs  token.rs  tree.rs  visitor.rs  walker.rs
crates/dry4rs/tests/: binary_smoke.rs  cascade_integration.rs  cli_pipeline.rs  dogfood_discovery.rs  dry_example_sync.rs  dry_schema_sync.rs  fingerprint_determinism.rs  normalizer_integration.rs  normalizer_proptest.proptest-regressions  normalizer_proptest.rs  run_loop_template.rs  self_check.rs  tree_leaf_fidelity.rs
crates/dry4rs/tests/snapshots/: fingerprint_determinism__walker_corpus_fingerprints.snap  self_check__dry4rs_self_analysis_stable_summary.snap
pr-157/: index.html
pr-158/: index.html
pr-159/: index.html
pr-160/: index.html
pr-161/: index.html
pr-162/: index.html
pr-163/: index.html
pr-164/: index.html
scripts/: bot-context-drift.py  check-config-ast-purity.sh  compose-report-html-comment.sh  test-compose-report-html-comment.sh  tracked-lint.py
