[workspace]
members = ["crates/dry-core", "crates/dry4rs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/breezy-bays-labs/dry-rs"
homepage = "https://github.com/breezy-bays-labs/dry-rs"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
rust-version = "1.85"

# Centralized dep versions. Front-loaded so domain PRs (#3), port-trait
# PRs (#4), comparison-engine PRs (#6), and the eventual dry4ts adapter
# all consume shared deps via `{ workspace = true }` rather than
# drifting per-crate version pins. New shared deps land here; per-crate
# Cargo.toml lists the dep without pinning a version.
#
# Notably absent at PR 1: `syn`, `proc-macro2`, `quote`. Those land in
# PR 5 with the dry4rs syn-based normalizer (`proc-macro2` requires
# the `span-locations` feature flag — silent breakage without it; CEng
# audit captured in roadmap §"Workspace shape").
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["json"] }
proptest = "1"
thiserror = "2"
globset = "0.4"
static_assertions = "1"
# File walker (PR 7) — `ignore` honors .gitignore / .ignore / .git/info/exclude
# (the same family rg/fd use); `walkdir` is the lower-level traversal it builds
# on. Both are listed in the hexagonal-layout ADR's `dry-core` allowed-deps
# table.
walkdir = "2"
ignore = "0.4"
# Terminal table rendering for the text reporter (PR 7). Pure stdout; no ANSI
# color is emitted at the reporter layer (color is a CLI-flag concern at PR 8).
comfy-table = "7"

# Workspace-wide lint config lands as the comparison engine + CLI come
# online (PRs 6 + 8). dry4ts joins this workspace at v0.6+ when its
# parser adapter ships (swc or oxc + napi-rs).
