[workspace]
members = ["crates/dry-core", "crates/dry4rs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/breezy-bays-labs/dry-rs"
homepage = "https://github.com/breezy-bays-labs/dry-rs"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
rust-version = "1.85"

# Centralized dep versions. Front-loaded so domain PRs (#3), port-trait
# PRs (#4), comparison-engine PRs (#6), and the eventual dry4ts adapter
# all consume shared deps via `{ workspace = true }` rather than
# drifting per-crate version pins. New shared deps land here; per-crate
# Cargo.toml lists the dep without pinning a version.
#
# Notably absent at PR 1: `syn`, `proc-macro2`, `quote`. Those land in
# PR 5 with the dry4rs syn-based normalizer (`proc-macro2` requires
# the `span-locations` feature flag — silent breakage without it; CEng
# audit captured in roadmap §"Workspace shape").
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["json"] }
proptest = "1"
thiserror = "2"
globset = "0.4"
static_assertions = "1"
# Rust AST parser for dry4rs's SynNormalizer (lands with PR 5). The
# `full` feature enables every syn item / expr / stmt visitor needed
# to walk function bodies; `extra-traits` derives `Debug` / `PartialEq`
# on syn types for test ergonomics. Restricted to `dry4rs` per the
# hexagonal layering ADR (`ops/decisions/dry-rs/adr-hexagonal-layout.md`)
# — `dry-core` must not import AST libraries. Source-level enforcement
# is the `dry-core AST-library purity` CI job.
syn = { version = "2", features = ["full", "extra-traits"] }
# Span tracking for syn-emitted errors and form positions. The
# `span-locations` feature is LOAD-BEARING: without it,
# `proc_macro2::Span::start()` / `end()` silently return
# `LineColumn { line: 0, column: 0 }` regardless of source position.
# Enforcement: `proc-macro2 span-locations enforcement` CI job +
# lefthook pre-push (`span-locations` hook). See the ADR per-crate
# dep table footnote.
proc-macro2 = { version = "1", features = ["span-locations"] }

# Workspace-wide lint config lands as the comparison engine + CLI come
# online (PRs 6 + 8). dry4ts joins this workspace at v0.6+ when its
# parser adapter ships (swc or oxc + napi-rs).
