[workspace]
members = ["crates/dry-core", "crates/dry4rs", "crates/dry-examples"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/breezy-bays-labs/dry-rs"
homepage = "https://github.com/breezy-bays-labs/dry-rs"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
rust-version = "1.85"

# Centralized dep versions. Front-loaded so domain PRs (#3), port-trait
# PRs (#4), comparison-engine PRs (#6), and the eventual dry4ts adapter
# all consume shared deps via `{ workspace = true }` rather than
# drifting per-crate version pins. New shared deps land here; per-crate
# Cargo.toml lists the dep without pinning a version.
#
# Notably absent at PR 1: `syn`, `proc-macro2`, `quote`. Those land in
# PR 5 with the dry4rs syn-based normalizer (`proc-macro2` requires
# the `span-locations` feature flag — silent breakage without it; CEng
# audit captured in roadmap §"Workspace shape").
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TOML parser for the `dry.toml` config-file loader (lands with
# dry-rs#71). Scoped to `dry-core::adapters::config`; the `domain/`
# POD types stay parser-agnostic and derive only `serde`. v0.8 is
# the current major; the loader uses `toml::from_str::<Config>()`
# + `toml::to_string_pretty(&Config)` (the latter for the round-trip
# property test). See `ops/decisions/org/adr-config-file-pattern.md`.
toml = "0.8"
insta = { version = "1", features = ["json"] }
proptest = "1"
thiserror = "2"
globset = "0.4"
static_assertions = "1"
# File walker (PR 7) — `ignore` honors .gitignore / .ignore / .git/info/exclude
# (the same family rg/fd use); `walkdir` is the lower-level traversal it builds
# on. Both are listed in the hexagonal-layout ADR's `dry-core` allowed-deps
# table.
walkdir = "2"
ignore = "0.4"
# Terminal table rendering for the text reporter (PR 7). Pure stdout; no ANSI
# color is emitted at the reporter layer (color is a CLI-flag concern at PR 8).
comfy-table = "7"
# CLI surface (PR 8). `clap` with `derive` powers the `Args` struct and
# the subcommand enum (`report` / `stats` / `check` / `ignore` / `ignored`
# / `cleanup`); `clap_complete` powers the `--completions <SHELL>` flag.
# Both are listed in the hexagonal-layout ADR's `dry-core` allowed-deps
# table (clap explicitly; clap_complete is the canonical companion for
# shell-completion generation and is treated as part of the clap family).
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Rust AST parser for dry4rs's SynNormalizer (lands with PR 5). The
# `full` feature enables every syn item / expr / stmt visitor needed
# to walk function bodies; `extra-traits` derives `Debug` / `PartialEq`
# on syn types for test ergonomics. Restricted to `dry4rs` per the
# hexagonal layering ADR (`ops/decisions/dry-rs/adr-hexagonal-layout.md`)
# — `dry-core` must not import AST libraries. Source-level enforcement
# is the `dry-core AST-library purity` CI job.
syn = { version = "2", features = ["full", "extra-traits"] }
# Span tracking for syn-emitted errors and form positions. The
# `span-locations` feature is LOAD-BEARING: without it,
# `proc_macro2::Span::start()` / `end()` silently return
# `LineColumn { line: 0, column: 0 }` regardless of source position.
# Enforcement: `proc-macro2 span-locations enforcement` CI job +
# lefthook pre-push (`span-locations` hook). See the ADR per-crate
# dep table footnote.
proc-macro2 = { version = "1", features = ["span-locations"] }
# Cross-toolchain-stable fingerprint hash for adapter normalizers
# (dry4rs at PR 5; dry4ts at v0.6+ honors the same hash). The `xxh3`
# feature provides `Xxh3` — a `Hasher` impl whose u64 output is stable
# across Rust toolchain releases per upstream contract, unlike
# `std::hash::DefaultHasher` (SipHash-1-3 with stdlib-internal fixed
# key — stdlib explicitly reserves the right to change the algorithm
# in any new toolchain). Cross-toolchain stability is load-bearing for
# the v0.3+ `--delta` baseline comparison feature (persisted baselines
# outlive MSRV bumps). See:
# `ops/decisions/dry-rs/adr-rust-normalization-rules.md` §
# "Hashing — `xxh3` via `xxhash-rust`" + ADR hexagonal-layout per-crate
# dep table footnote [²]. Restricted to adapter crates per the layering
# ADR — `dry-core` does NOT depend on `xxhash-rust` because the
# comparison engine consumes pre-computed `HashSet<u64>` and never
# hashes anything itself.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Workspace-wide lint config lands as the comparison engine + CLI come
# online (PRs 6 + 8). dry4ts joins this workspace at v0.6+ when its
# parser adapter ships (swc or oxc + napi-rs).
