[package]
name = "dry-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Language-agnostic core for the dry structural duplication detector — domain types, port traits, comparison engine, reporters, CLI surface. Shared by every adapter binary in the workspace (dry4rs, dry4ts)."
keywords = ["dry", "duplication", "quality", "static-analysis", "jaccard"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
rust-version.workspace = true

# dry-core is the language-agnostic library shared by every adapter
# binary in the workspace. Per the hexagonal layering ADR
# (`ops/decisions/dry-rs/adr-hexagonal-layout.md`, filed in PR 2),
# this crate must never depend on AST libraries — `syn`, `swc_*`,
# `oxc_*`, `tree-sitter*`, `proc-macro2`, `quote`. The parser adapter
# for each source language lives in its own adapter crate (dry4rs for
# Rust via syn, dry4ts for TypeScript via swc/oxc). cargo-deny
# enforces the rule transitively in `deny.toml` plus a source-level
# grep in the `ast-purity` CI job.

[lib]
name = "dry_core"
path = "src/lib.rs"

[dependencies]
# Domain (de)serialization. No `serde-on-AST`: serde lives in
# `domain/` only because wire shapes need to round-trip identically
# across adapter binaries. Shared version via `[workspace.dependencies]`.
serde = { workspace = true }
# Per-port error enums derive `thiserror::Error` so adapter callers
# get `std::error::Error` with `#[source]` chaining without
# hand-rolled boilerplate.
thiserror = { workspace = true }
# Reserved for the free-function file walker landing in PR 7 — the
# walker rejects empty/whitespace-only patterns and surfaces compile
# errors from `globset::Glob::new(...)` through its own error type.
# Pulled now to keep the workspace dep declaration centralized; the
# port surface (PR 4) does NOT consume globset (file enumeration is a
# free function per the hexagonal-layout ADR's "language-agnostic core"
# section, not a port — `NormalizerPort` is the single port trait).
globset = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
# Compile-time `assert_obj_safe!` smoke checks for port traits — fails
# to compile if a future edit introduces a non-object-safe method
# (e.g. `Self: Sized`, generic methods, `&mut self` requirement on a
# port trait).
static_assertions = { workspace = true }
