[package]
name = "dry-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Language-agnostic core for the dry structural duplication detector — domain types, port traits, comparison engine, reporters, CLI surface. Shared by every adapter binary in the workspace (dry4rs, dry4ts)."
keywords = ["dry", "duplication", "quality", "static-analysis", "jaccard"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
rust-version.workspace = true

# dry-core is the language-agnostic library shared by every adapter
# binary in the workspace. Per the hexagonal layering ADR
# (`ops/decisions/dry-rs/adr-hexagonal-layout.md`, filed in PR 2),
# this crate must never depend on AST libraries — `syn`, `swc_*`,
# `oxc_*`, `tree-sitter*`, `proc-macro2`, `quote`. The parser adapter
# for each source language lives in its own adapter crate (dry4rs for
# Rust via syn, dry4ts for TypeScript via swc/oxc). cargo-deny
# enforces the rule transitively in `deny.toml` plus a source-level
# grep in the `ast-purity` CI job.

[lib]
name = "dry_core"
path = "src/lib.rs"

[dependencies]
# Domain (de)serialization. No `serde-on-AST`: serde lives in
# `domain/` only because wire shapes need to round-trip identically
# across adapter binaries. Shared version via `[workspace.dependencies]`.
serde = { workspace = true }
# JSON reporter (PR 7) lives in `dry-core::adapters::reporters::json`
# and constructs the locked v0.1 envelope. `serde_json` is now a
# runtime dep, not dev-only.
serde_json = { workspace = true }
# Per-port error enums derive `thiserror::Error` so adapter callers
# get `std::error::Error` with `#[source]` chaining without
# hand-rolled boilerplate.
thiserror = { workspace = true }
# Glob support — reserved for the file walker's future allowlist /
# include-pattern surface (lands in PR 8 with the CLI flags). PR 7 ships
# only the extension filter on `AnalysisConfig`, so `globset` is not yet
# imported, but the dep stays declared so the surface area is centralized.
globset = { workspace = true }
# File walker (PR 7) — `ignore` provides gitignore-aware iteration in
# the same shape `rg` / `fd` use; `walkdir` is the lower-level traversal
# `ignore` builds on. The walker (`adapters::source::enumerate`) returns
# a deterministically-sorted `Vec<FilePath>`; sort ordering is in
# `walkdir`/`ignore`'s `sort_by_file_name` step (see the source-adapter
# implementation).
walkdir = { workspace = true }
ignore = { workspace = true }
# Text reporter (PR 7) renders findings grouped by tier in a terminal
# table. The reporter emits no ANSI color codes at this layer — color
# is a CLI-flag concern owned by the `--color always|auto|never` flag
# landing in PR 8.
comfy-table = { workspace = true }
# CLI surface (PR 8) — `clap` with `derive` powers `Args` + the
# subcommand enum; `clap_complete` powers `--completions <SHELL>`.
# Both ship inside `dry-core::cli` because the CLI surface is
# language-agnostic (adapter binaries provide only a 5-line `main()`
# that calls `dry_core::cli::run::<MyNormalizer>()`). See the
# hexagonal-layout ADR per-crate dep table.
clap = { workspace = true }
clap_complete = { workspace = true }
# TOML parser for the `<adapter>.toml` config-file loader
# (`dry-core::adapters::config`). Scoped here per the cross-tool
# config-file ADR (`ops/decisions/org/adr-config-file-pattern.md` D6):
# loader stays in `adapters/`; POD config types live in `domain/` and
# derive only `serde`. `toml::from_str::<Config>` consumes the
# strict-deny-unknown-fields schema; `toml::to_string_pretty(&Config)`
# powers the round-trip property test.
toml = { workspace = true }
# Format-preserving TOML writer for the Starship-style doc-gen
# emitter (`adapters::config::doc_gen`, dry-rs#77). `toml_edit::
# DocumentMut` carries per-field leading comments via
# `decor::set_prefix` — the load-bearing API for the annotated
# `dry.example.toml` output. `toml` only emits values; comments
# require `toml_edit`.
toml_edit = { workspace = true }
# Doc-comment reflection for the Starship-style doc-gen emitter
# (dry-rs#77). `#[derive(DocumentedFields)]` on each POD config
# struct exposes each field's `///` doc as an associated constant
# accessible at runtime — the single source of truth that feeds
# docs.rs, IDE hovers, AND the annotated example output.
documented = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
# Compile-time `assert_obj_safe!` smoke checks for port traits — fails
# to compile if a future edit introduces a non-object-safe method
# (e.g. `Self: Sized`, generic methods, `&mut self` requirement on a
# port trait).
static_assertions = { workspace = true }
# Temporary file/dir fixtures for the `source::enumerate` walker
# tests (PR 7). Confined to dev-deps; the walker itself does not read
# tmp paths.
tempfile = "3"
