[package]
name = "dry4rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Structural duplication detector for Rust — finds Jaccard-similar subforms across functions, methods, blocks, and expression chains. Rust-source adapter for the dry-core analyzer."
keywords = ["dry", "duplication", "quality", "static-analysis", "jaccard"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
rust-version.workspace = true

# Binstall metadata is intentionally not wired during v0.x — see
# CLAUDE.md "v0.x -> v1.0 transition" for the decoupled per-crate
# release gate. When dry4rs v1.0 lands, mirror crap4rs's
# [package.metadata.binstall] block.

[lib]
name = "dry4rs"
path = "src/lib.rs"

[[bin]]
name = "dry4rs"
path = "src/main.rs"

[dependencies]
# Language-agnostic core — domain types, port traits, comparison
# engine, reporters, CLI surface. dry4rs adds only the Rust-specific
# parser adapter (lands with PR 5 via syn + proc-macro2).
dry-core = { path = "../dry-core", version = "0.1.0" }
# Rust AST parser. See `[workspace.dependencies]` for the `full` +
# `extra-traits` feature rationale.
syn = { workspace = true }
# Span tracking. The `span-locations` feature is enforced via the
# `proc-macro2 span-locations enforcement` CI job (workspace dep
# declaration carries the feature flag; consuming crates inherit).
proc-macro2 = { workspace = true }
# Cross-toolchain-stable fingerprint hash (xxh3). The hexagonal
# layering ADR per-crate dep table footnote [²] makes xxhash-rust
# load-bearing across every adapter — the comparison engine compares
# `HashSet<u64>` set-equality on raw values, so all adapters MUST
# share the same hash algorithm. `dry-core` itself does NOT depend on
# this crate; hashing lives entirely in adapter normalizers.
xxhash-rust = { workspace = true }

[dev-dependencies]
# Property tests for normalizer invariants (determinism, parseable
# input never panics, span round-trip consistency).
proptest = { workspace = true }
# JSON parsing for end-to-end pipeline tests (PR 8) — the binary
# emits the wire envelope; tests parse it back to assert shape
# invariants. Confined to dev-deps.
serde_json = { workspace = true }
# Tempdir fixtures for the CLI binary-smoke tests (PR 8). Confined to
# dev-deps; the analyzer never reads tmp paths in production.
tempfile = "3"
# Snapshot testing for the self-referential test (PR 9). The
# `dry4rs_self_analysis_summary_matches_snapshot` test in
# `tests/self_check.rs` runs the dry4rs binary against the workspace's
# own `crates/` tree and snapshots a stable subset of the JSON wire
# envelope (`total_forms` + `matches_count` + `by_tier`) so a
# regression in the comparison engine or normalizer fails CI
# predictably. Confined to dev-deps; the analyzer itself never depends
# on insta. The `json` feature enables `assert_json_snapshot!`.
insta = { workspace = true }
# TOML parser for the doc-gen sync test (`tests/dry_example_sync.rs`).
# The round-trip parse asserts the committed `dry.example.toml` is
# exhaustive (every `Option<T>` = `Some`, every collection non-
# empty). Confined to dev-deps; production runtime stays on
# `dry_core::adapters::config`'s loader. dry-rs#77.
toml = { workspace = true }
